# Celestial-Speedrun

./: CMakeLists.txt  Manual.html  README.md  documentation_manual.txt
assets/levels/: 1_Hells_Office.json  experiment.json  level1.json  level2.json  level3.json  level4.json  level5.json
include/: CollisionSystem.hpp  LevelManager.hpp  Optimizer.hpp  PhysicsTypes.hpp  PlatformBody.hpp  PlatformDrawable.hpp  Player.hpp  Sprite.hpp  SpriteManager.hpp  Tile.hpp  dynamicBody.hpp  interpolate.hpp  platformBody.hpp  tile.hpp
src/: CollisionSystem.cpp  LevelManager.cpp  Optimizer.cpp  PlatformBody.cpp  Player.cpp  Sprite.cpp  SpriteManager.cpp  Tile.cpp  dynamicBody.cpp  interpolate.cpp  main.cpp  platfomBody.cpp  platformBody.cpp  tile.cpp
